# tinyHTTP

./: CMakeLists.txt  README.md  dbconfig.json
HttpServer/examples/: test.cpp  testConnPool.cpp  testHttpContext.cpp  testRouter.cpp
HttpServer/include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h
HttpServer/include/middleware/: Middleware.h  MiddlewareChain.h
HttpServer/include/router/: Router.h  RouterHandler.h
HttpServer/include/session/: Session.h  SessionManager.h  SessionStorage.h
HttpServer/include/utils/db/: sqlConnection.h  sqlConnectionPool.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
HttpServer/src/utils/db/: sqlConnection.cpp  sqlConnectionPool.cpp
